--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   </a>
                 </h3>
                 <p>
-                  Email Address
+                  Github Profile
                 </p>
               </div>
             </div>
