--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </a>
                   </h3>
                   <p>
-                        Github Profile
+                        Twitter Profile
                   </p>
                 </div>
             </div>
