--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <i class="icon-linkedin"></i>
               <div class="item-data">
                 <h3>
-                  <a href="https://www.linkedin.com/in/shubham-vernekar-708">
+                  <a href="https://www.linkedin.com/in/vernekar-708/">
                     shubham-vernekar-708
                   </a>
                 </h3>
