--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                              Hire me for your next project
                   </a>
                 </li>
-                  <li><a href="https://drive.google.com/file/d/1xC-0WKRjl4prf4q4oOro0BbEcwIBfoDr/view?usp=sharing"><button class="btn"><i
+                  <li><a href="https://drive.google.com/file/d/1Rs2Kry6yciAGBr7ytGxFXgp3yx6SKsGb/view?usp=sharing"><button class="btn"><i
                           class="fa fa-download"></i> C.V</button>View my C.V</a></li>
                 </li>
                 <li>
@@ -172,8 +172,8 @@
               <i class="icon-linkedin"></i>
               <div class="item-data">
                 <h3>
-                  <a href="https://www.linkedin.com/in/vernekar-708/">
-                    shubham-vernekar-708
+                  <a href="https://www.linkedin.com/in/shubhamvernekar/">
+                    shubhamvernekar
                   </a>
                 </h3>
                 <p>
