--- a/RollingBallPolicy.html
+++ b/RollingBallPolicy.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Privacy Policy</h1>
 	<pre>
-Eleccoons built the Speed Brain app as an Ad Supported app. This SERVICE is provided by Eleccoons at no cost and is intended for use as is.
+Eleccoons built this app as an Ad Supported app. This SERVICE is provided by Eleccoons at no cost and is intended for use as is.
 
 This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
 
@@ -23,10 +23,6 @@ The app does use third party services that may collect information used to ident
 Link to privacy policy of third party service providers used by the app
 
 Google Play Services
-
-Firebase Analytics
-
-Firebase Crashlytics
 
 We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
 
