--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>jackpiro</title>
+    <title>Eleccoons</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -49,12 +49,12 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                                        <a href="index.html"><span>Eleccoons</span></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                        <!-- <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                             
                                         <ul class="top_icon">
                                             <li class="button_login"> <a href="#">Login</a> </li>
@@ -63,7 +63,7 @@
                                              <a href="#"><img src="images/search_icon.png" alt="#" /></a>
                                             </li>
                                         </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -80,10 +80,8 @@
                                 <div class="limit-box">
                                     <nav class="main-menu">
                                         <ul class="menu-area-main">
-                                            <li class="active"> <a href="#game">Game</a> </li>
-                                            <li> <a href="#software">Software</a> </li>
+                                            <li class="active"> <a href="#games">Our Game</a> </li>
                                             <li> <a href="#about">About</a> </li>
-                                            <li> <a href="#testimonial">Testimonial</a> </li>
                                             <li> <a href="#contact">Contact</a> </li>
                                            
                                         </ul>
@@ -93,17 +91,14 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 ">
                                 <div class="text-bg">
-                                    <h1>amazing<br> 3d game</h1>
-                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br> tempor incididunt ut</span>
-                                    <a href="#">download</a>
+                                    <h1>We are passionate,</span> <br> creative and <br> innovative game studio.</h1>
                                 </div>
                             </div>
                              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 ">
                                 <div class="text-img">
-                                   <figure><img src="images/img.png" alt="#"/></figure>
+                                   <figure><img src="images/bg.png" alt="#"/></figure>
                                 </div>
                             </div>
-
 
                         </div>
                     </div>
@@ -129,16 +124,16 @@
 
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                             <div class="two-box">
-                                <figure><img src="images/our-image1.jpg" alt="#" /></figure>
+                                <figure><img src="images/escapemaze.png" alt="https://play.google.com/store/apps/details?id=com.eleccoons.rollingballgame" /></figure>
                             </div>
                         </div>
 
                         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
 
                             <div class="Games">
-                                <h3>Angry Birds</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
+                                <h3>Escape Maze 3D</h3>
+                                <p>Escape Maze 3D is a puzzle game that will test your brainpower by challenging you to solve increasingly tricky labyrinths. In this game, you must rotate 3D mazes to collect all the balls. The game becomes more complex as you progress, and the goal is to collect all the balls in the cup at the bottom. </p>
+                                <a href="https://play.google.com/store/apps/details?id=com.eleccoons.rollingballgame">Download Now</a>
                             </div>
                         </div>
                     </div>
@@ -148,37 +143,24 @@
 
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                             <div class="two-box">
-                                <figure><img src="images/our-image2.jpg" alt="#" /></figure>
+                                <figure><img src="images/speedbrain.png" alt="https://play.google.com/store/apps/details?id=com.sv.speed_brain" /></figure>
                             </div>
                         </div>
 
                         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
 
                             <div class="Games">
-                                <h3>Sanke</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
+                                <h3>Speed Brain</h3>
+                                <p>Speed Brain game to quick exercise to your brain Awareness, Reflex, Reasoning, Precision, and Patience. It has everything that you need to improve your reflexes and reaction! </p>
+                                <a href="https://play.google.com/store/apps/details?id=com.sv.speed_brain">Download Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12">
+
+                <div class="col-md-12 margin_bottom">
                     <div class="row">
-
-                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-                            <div class="two-box">
-                                <figure><img src="images/our-image3.jpg" alt="#" /></figure>
-                            </div>
-                        </div>
-
-                        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
-
-                            <div class="Games">
-                                <h3>Cricket</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
-                            </div>
-                        </div>
+                        <h1 style="font-size: 4em;"> more <span style="font-weight: bold; background-color: rgb(246, 255, 0); color: rgb(0, 0, 0);">coming </span> <span> </span>&nbsp<span>soon</span></h1>
                     </div>
                 </div>
             </div>
@@ -186,36 +168,6 @@
     </div>
    
     <!-- end our -->
-    <!-- We are -->
-    <div id="software" class="We_are">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2>Software</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                     <div class="box_bg">
-                         <div class="box_bg_img">
-                             <figure><img src="images/soft.jpg"></figure>
-                         </div>
-                     </div>
-                 </div>
-                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
-                     <div class="box_text">
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                         <a href="#">Read more</a>
-                     </div>
-                 </div> 
-            </div>
-        </div>
-    </div>
-    <!-- end We are -->
 
     <!-- about  -->
     <div id="about" class="about">
@@ -223,27 +175,32 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>About Our Game</h2>
+                        <h2>About Us</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="about-box">
-                        <figure><img src="images/about.jpg" alt="#" /></figure>
-
-                        <p> consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            <br> labore et dolore magna aliqua. Ut enim conseq</p>
+                        <p> 
+                            Eleccoons is a dynamic and innovative game development company based in India, specializing in creating engaging and entertaining casual and hypercasual games. With a team of highly skilled and passionate individuals, we strive to deliver captivating gaming experiences that bring joy and excitement to players worldwide.</p>
+                        <br>
+                        <h1 style="text-align: left;">Hyper-Casual <span style="background-color: black; color: white;">Games</span></h1>
+                        <br>
+                        <h1 style="text-align: left;"> <span style="background-color: rgb(169, 169, 169); color: rgb(0, 0, 0);">Puzzle Games</span> </h1>
+                        <br>
+                        <h1 style="text-align: left;"> <span style="background-color: black; color: white;">Brain</span> <span> Teaser</span></h1>
+                        <br>
+                        <h1 style="text-align: left;"> <span style="background-color: rgb(169, 169, 169); color: white;">Strategy </span> <span style="background-color: black; color: white;">Games</span></h1>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- end abouts -->
 
     <!-- testimonial -->
-    <div id="testimonial" class="testimonial">
+    <!-- <div id="testimonial" class="testimonial">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -282,12 +239,12 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <!-- end testimonial -->
 
     <!-- contact -->
-    <div id="contact" class="contact">
+    <!-- <div id="contact" class="contact">
         <div class="container">
 
             <div class="row">
@@ -317,14 +274,15 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
    
     <!-- end contact -->
 
     <!--  footer -->
     <footr>
         <div class="footer ">
-            <div class="container">
+            <h2 id="contact" style="font-size: 4em; text-align: center;"><p> <span style="color: rgb(243, 243, 243);"> Contact us at </span> <span style="background-color: yellow; color: rgb(18, 17, 17);">eleccoons@gmail.com</span></p></h2>
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Newsletter</h2>
@@ -392,10 +350,10 @@
 
                 </div>
 
-            </div>
+            </div> -->
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. <a href="https://html.design/">Free html Templates</a></p>
+                    <p>© 2023 by Eleccoons</p>
                 </div>
             </div>
         </div>
